Fixed whitespace issue

--- a/css/style.css
+++ b/css/style.css
@@ -182,12 +182,6 @@ figure {
   background-color: #192024;
 }
 
-.section-break hr {
-  width: 100%;
-  height: 2px;
-  border:none;
-  margin: 0;
-}
 
 
 /*
